@@ -96,14 +96,15 @@ def get_filter_terms(context, request):
     # "Any" is also defined in search.pt
     empty = (u'', translate(context, request, _(u'Any')))
 
-    filterable = lambda k: k.startswith('cat') \
-        and request[k].decode('utf-8') not in empty
-
-    category_keys = (k for k in request.keys() if filterable(k))
-
-    for key in category_keys:
-        text = request[key].decode('utf-8')
-        terms[key] = remove_count(text)
+    for key, value in request.items():
+        if key.startswith('cat'):
+            if isinstance(value, basestring):
+                text = request[key].decode('utf-8')
+                if text not in empty:
+                    terms[key] = remove_count(text)
+            else:
+                texts = [item.decode('utf-8') for item in request[key]]
+                terms[key] = [remove_count(item) for item in texts]
 
     return terms
 
